# yz_shopping_Cart

./: README.md
shop_cart/: README.md  pyproject.toml  shop.db  shopping cart code.docx  ~$opping cart code.docx  ~WRL0323.tmp
shop_cart/src/shop_cart/: main.py  main1.py
shop_cart/src/shop_cart/crews/poem_crew/: poem_crew.py
shop_cart/src/shop_cart/crews/poem_crew/config/: agents.yaml  tasks.yaml
shop_cart/src/shop_cart/crews/shopCart_crew/: shop.py  shopCart.py
shop_cart/src/shop_cart/tools/: custom_tool.py
