[project]
name = "shop_cart"
version = "0.1.0"
description = "shop_cart using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
kickoff = "shop_cart.main:kickoff"
plot = "shop_cart.main:plot"
shop-agents = "shop_cart.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
